--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 	},
 	"homepage": "https://github.com/genesis-steve/SlotTest#readme",
 	"dependencies": {
+		"@tweenjs/tween.js": "^18.6.4",
 		"mini-signals": "^1.2.0",
 		"pixi-spine": "^2.0.5",
 		"pixi.js": "^5.3.3",
