--- a/package.json
+++ b/package.json
@@ -19,19 +19,23 @@
 	"homepage": "https://github.com/genesis-steve/SlotTest#readme",
 	"dependencies": {
 		"@tweenjs/tween.js": "^18.6.4",
+		"file-loader": "^6.2.0",
+		"json5-loader": "^4.0.1",
 		"mini-signals": "^1.2.0",
+		"null-loader": "^4.0.1",
 		"pixi-spine": "^2.0.5",
 		"pixi.js": "^5.3.3",
 		"typescript": "^4.0.3",
 		"typescript-ioc": "^3.2.2",
-		"typescript-map": "0.0.7"
+		"typescript-map": "0.0.7",
+		"url-loader": "^4.1.1"
 	},
 	"devDependencies": {
 		"@types/html-webpack-plugin": "^3.2.4",
 		"@types/node": "^8.0.25",
 		"@types/node-polyglot": "^0.4.30",
 		"@types/pixi.js": "^5.0.0",
-		"copy-webpack-plugin": "^5.1.1",
+		"copy-webpack-plugin": "^5.1.2",
 		"css-loader": "^5.0.1",
 		"expose-loader": "^1.0.1",
 		"happypack": "^5.0.1",
